Saved and loaded model locally

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         height: 84vh;
       "
     >
@@ -66,31 +67,8 @@
           align-items: center;
         "
       >
-        <p style="padding-top: 10px">The genre of the song uploaded is</p>
-        <div
-          style="
-            background: #15141d;
-            border: 1px solid #fedfe8;
-            box-sizing: border-box;
-            border-radius: 33px;
-            width: 607px;
-            height: 140px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          "
-        >
-          <h1
-            style="
-              font-family: Fahkwang;
-              text-align: center;
-              font-size: 5rem;
-              color: #fedfe8;
-            "
-          >
-            classical
-          </h1>
-        </div>
+        <p style="font-size: 1.5rem;">The genre of the song uploaded is</p>
+          <img src="https://cdn.discordapp.com/attachments/750019721193324544/968950040502599710/blank.png" width="500" />
       </div>
     </div>
   </body>
